@@ -1,6 +1,13 @@
 2017-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
+	patch #9507: Fix UPDI chip erase
+	* jtag3.c (jtag3_chip_erase_updi): New function
+	* jtag3_private.h: More constants
+
+2017-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
 	patch #9508: Add PowerDebugger and XPlained Mini in UPDI mode
 	* avrdude.conf.in (xplainedmini_updi, powerdebugger,
 	powerdebugger_pdi, powerdebugger_updi, powerdebugger_dw,
